; ModuleID = '/home/carl/AnghaBench/postgres/src/timezone/extr_zic.c_oadd.c'
source_filename = "/home/carl/AnghaBench/postgres/src/timezone/extr_zic.c_oadd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZIC_MIN = common dso_local global i64 0, align 8
@ZIC_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @oadd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @oadd(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @ZIC_MIN, align 8
  %10 = load i64, i64* %3, align 8
  %11 = sub nsw i64 %9, %10
  %12 = icmp slt i64 %8, %11
  br i1 %12, label %19, label %21

13:                                               ; preds = %2
  %14 = load i64, i64* @ZIC_MAX, align 8
  %15 = load i64, i64* %3, align 8
  %16 = sub nsw i64 %14, %15
  %17 = load i64, i64* %4, align 8
  %18 = icmp slt i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %13, %7
  %20 = call i32 (...) @time_overflow()
  br label %21

21:                                               ; preds = %19, %13, %7
  %22 = load i64, i64* %3, align 8
  %23 = load i64, i64* %4, align 8
  %24 = add nsw i64 %22, %23
  ret i64 %24
}

declare dso_local i32 @time_overflow(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
